parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@function_def.py-19.snap
---
source: parser/src/parser/parser.rs
description: "def a[T: U, V: W, *X](): pass"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
Module {
    node: Node {
        start: 0,
        end: 29,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 0,
                    end: 29,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 22,
                        end: 22,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 25,
                                end: 29,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                type_params: [
                    TypeVar(
                        TypeVar {
                            node: Node {
                                start: 6,
                                end: 10,
                            },
                            name: "T",
                            bound: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 9,
                                            end: 10,
                                        },
                                        id: "U",
                                    },
                                ),
                            ),
                        },
                    ),
                    TypeVar(
                        TypeVar {
                            node: Node {
                                start: 12,
                                end: 16,
                            },
                            name: "V",
                            bound: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 15,
                                            end: 16,
                                        },
                                        id: "W",
                                    },
                                ),
                            ),
                        },
                    ),
                    TypeVarTuple(
                        TypeVarTuple {
                            node: Node {
                                start: 18,
                                end: 20,
                            },
                            name: "X",
                        },
                    ),
                ],
            },
        ),
    ],
}
