parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@function_def.py-23.snap
---
source: parser/src/parser/parser.rs
description: "def a[T: U, V: W, **X](): pass"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
Module {
    node: Node {
        start: 0,
        end: 30,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 0,
                    end: 30,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 23,
                        end: 23,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 26,
                                end: 30,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                type_params: [
                    TypeVar(
                        TypeVar {
                            node: Node {
                                start: 6,
                                end: 10,
                            },
                            name: "T",
                            bound: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 9,
                                            end: 10,
                                        },
                                        id: "U",
                                    },
                                ),
                            ),
                        },
                    ),
                    TypeVar(
                        TypeVar {
                            node: Node {
                                start: 12,
                                end: 16,
                            },
                            name: "V",
                            bound: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 15,
                                            end: 16,
                                        },
                                        id: "W",
                                    },
                                ),
                            ),
                        },
                    ),
                    ParamSpec(
                        ParamSpec {
                            node: Node {
                                start: 18,
                                end: 21,
                            },
                            name: "X",
                        },
                    ),
                ],
            },
        ),
    ],
}
