parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@function_def.py-26.snap
---
source: parser/src/parser/parser.rs
description: "def dataclass_transform(\n    *,\n    eq_default: bool = True,\n    order_default: bool = False,\n    kw_only_default: bool = False,\n    frozen_default: bool = False,  # on 3.11, runtime accepts it as part of kwargs\n    # this next annotation cannot be parsed need fix\n    field_specifiers: tuple[type[Any] | Callable[..., Any], ...] = (),\n    **kwargs: Any,\n) -> IdentityFunction: ...\n"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
Module {
    node: Node {
        start: 0,
        end: 382,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 0,
                    end: 382,
                },
                name: "dataclass_transform",
                args: Arguments {
                    node: Node {
                        start: 29,
                        end: 354,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [
                        Arg {
                            node: Node {
                                start: 36,
                                end: 59,
                            },
                            arg: "eq_default",
                            annotation: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 48,
                                            end: 52,
                                        },
                                        id: "bool",
                                    },
                                ),
                            ),
                        },
                        Arg {
                            node: Node {
                                start: 65,
                                end: 92,
                            },
                            arg: "order_default",
                            annotation: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 80,
                                            end: 84,
                                        },
                                        id: "bool",
                                    },
                                ),
                            ),
                        },
                        Arg {
                            node: Node {
                                start: 98,
                                end: 127,
                            },
                            arg: "kw_only_default",
                            annotation: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 115,
                                            end: 119,
                                        },
                                        id: "bool",
                                    },
                                ),
                            ),
                        },
                        Arg {
                            node: Node {
                                start: 133,
                                end: 161,
                            },
                            arg: "frozen_default",
                            annotation: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 149,
                                            end: 153,
                                        },
                                        id: "bool",
                                    },
                                ),
                            ),
                        },
                        Arg {
                            node: Node {
                                start: 269,
                                end: 334,
                            },
                            arg: "field_specifiers",
                            annotation: Some(
                                Subscript(
                                    Subscript {
                                        node: Node {
                                            start: 287,
                                            end: 329,
                                        },
                                        value: Name(
                                            Name {
                                                node: Node {
                                                    start: 287,
                                                    end: 292,
                                                },
                                                id: "tuple",
                                            },
                                        ),
                                        slice: Tuple(
                                            Tuple {
                                                node: Node {
                                                    start: 293,
                                                    end: 329,
                                                },
                                                elements: [
                                                    BinOp(
                                                        BinOp {
                                                            node: Node {
                                                                start: 293,
                                                                end: 323,
                                                            },
                                                            op: BitOr,
                                                            left: Subscript(
                                                                Subscript {
                                                                    node: Node {
                                                                        start: 293,
                                                                        end: 302,
                                                                    },
                                                                    value: Name(
                                                                        Name {
                                                                            node: Node {
                                                                                start: 293,
                                                                                end: 297,
                                                                            },
                                                                            id: "type",
                                                                        },
                                                                    ),
                                                                    slice: Name(
                                                                        Name {
                                                                            node: Node {
                                                                                start: 298,
                                                                                end: 301,
                                                                            },
                                                                            id: "Any",
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                            right: Subscript(
                                                                Subscript {
                                                                    node: Node {
                                                                        start: 305,
                                                                        end: 323,
                                                                    },
                                                                    value: Name(
                                                                        Name {
                                                                            node: Node {
                                                                                start: 305,
                                                                                end: 313,
                                                                            },
                                                                            id: "Callable",
                                                                        },
                                                                    ),
                                                                    slice: Tuple(
                                                                        Tuple {
                                                                            node: Node {
                                                                                start: 314,
                                                                                end: 323,
                                                                            },
                                                                            elements: [
                                                                                Constant(
                                                                                    Constant {
                                                                                        node: Node {
                                                                                            start: 314,
                                                                                            end: 317,
                                                                                        },
                                                                                        value: ...,
                                                                                    },
                                                                                ),
                                                                                Name(
                                                                                    Name {
                                                                                        node: Node {
                                                                                            start: 319,
                                                                                            end: 322,
                                                                                        },
                                                                                        id: "Any",
                                                                                    },
                                                                                ),
                                                                            ],
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                    Constant(
                                                        Constant {
                                                            node: Node {
                                                                start: 325,
                                                                end: 328,
                                                            },
                                                            value: ...,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                    kw_defaults: [
                        Some(
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 55,
                                        end: 59,
                                    },
                                    value: true,
                                },
                            ),
                        ),
                        Some(
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 87,
                                        end: 92,
                                    },
                                    value: false,
                                },
                            ),
                        ),
                        Some(
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 122,
                                        end: 127,
                                    },
                                    value: false,
                                },
                            ),
                        ),
                        Some(
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 156,
                                        end: 161,
                                    },
                                    value: false,
                                },
                            ),
                        ),
                        Some(
                            Tuple(
                                Tuple {
                                    node: Node {
                                        start: 332,
                                        end: 334,
                                    },
                                    elements: [],
                                },
                            ),
                        ),
                    ],
                    kwarg: Some(
                        Arg {
                            node: Node {
                                start: 342,
                                end: 353,
                            },
                            arg: "kwargs",
                            annotation: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 350,
                                            end: 353,
                                        },
                                        id: "Any",
                                    },
                                ),
                            ),
                        },
                    ),
                    defaults: [],
                },
                body: [
                    ExpressionStatement(
                        Constant(
                            Constant {
                                node: Node {
                                    start: 378,
                                    end: 381,
                                },
                                value: ...,
                            },
                        ),
                    ),
                ],
                decorator_list: [],
                returns: Some(
                    Name(
                        Name {
                            node: Node {
                                start: 360,
                                end: 376,
                            },
                            id: "IdentityFunction",
                        },
                    ),
                ),
                type_comment: None,
                type_params: [],
            },
        ),
    ],
}
